# knapsack-service

./: .gitignore  ASSIGNMENT.md  README.md  compose.yaml  test.py
db/postgres/: Dockerfile  up.sql
db/rabbitmq/: Dockerfile
db/rabbitmq/conf/: definitions.json
deployment/: docker.tf  k8.tf  providers.tf  terraform.tfstate.backup
services/: rust-1.79-Dockerfile
services/api/: Cargo.toml  Dockerfile
services/api/src/: db.rs  dto.rs  main.rs  queue.rs
services/api/src/db/: models.rs  schema.rs
services/optimizer/: Cargo.toml
services/optimizer/src/: db.rs  main.rs  queue.rs  solver.rs
services/optimizer/src/db/: models.rs
