[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.10", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
async-global-executor = "2.4.1"
futures = "0.3.30"
lapin = "2.3.4"
rocket = { version = "0.5.1" , features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.2.0", features = ["postgres", "uuid"] }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
