[package]
name = "optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.10", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
lapin = "2.3.4"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
futures-lite = "2.3.0"
diesel = { version = "2.2.0", features = ["postgres", "uuid"] }
genevo = { version = "0.7.1", features = ["smallvec"]}
smallvec = "1.13.2"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
